new file:   "CambiarContrase\303\261a.html" 	new file:   IniciarSesion.html 	modified:   Instrumentos.html 	modified:   QuienesSomos.html 	new file:   Registrarse.html 	new file:   "Style/CambiarContrase\303\261a.css" 	new file:   Style/IniciarSesion.css 	modified:   Style/Instrumentos.css 	modified:   Style/QuienesSomos.css 	new file:   Style/Registrarse.css 	modified:   Style/style.css 	modified:   index.html 	deleted:    saxofon.html 	deleted:    violines.html

--- a/Instrumentos.html
+++ b/Instrumentos.html
@@ -23,6 +23,17 @@
             <label for = "menu">
             </label>
 
+            <div class="busqueda"> 
+
+                <input type="text" placeholder="Buscar...">
+                <button> 
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="botonbuscar">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z" />
+                    </svg>
+                </button>
+
+            </div>
+
             <nav class="navbar">
 
             <ul>
@@ -41,6 +52,18 @@
             </div>
 
             </nav>
+
+            <button class="btn-datos"><a href="/IniciarSesion.html">Iniciar Sesion</a></button>
+            <button class="btn-datos"><a href="/Registrarse.html">Registrarse</a></button>
+
+            <button>
+
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="botoncarrito">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 0 0-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 0 0-16.536-1.84M7.5 14.25 5.106 5.272M6 20.25a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Zm12.75 0a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+                </svg>
+
+            </button>
+
 
         </div>
 
@@ -236,22 +259,22 @@
             <div class="col-md-6">
                 
                 <div class="card" style="width: 20rem;">
-                    <img src="https://cdnx.jumpseller.com/musicchile/image/28392363/resize/450/450?1665663662" class="card-img-top" alt="...">
+                    <img src="https://cdnx.jumpseller.com/musicchile/image/46042761/resize/900/900?1709433679" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Saxofón Alto Allegro Antique All6430An</h5>
-                        <p class="card-text">Único en su clase, delicado, sencillo y ligero.</p>
-                        <p> $499.900</p>
+                        <h5 class="card-title">Violín Outfit 1/4' HV-50 Cervini</h5>
+                        <p class="card-text">El violín Cervini viene completo con un estuche liviano y duradero.</p>
+                        <p> $79.900</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div class="card" style="width: 20rem;">
-                        <img src="Imagenes/saxofon.jpg" class="card-img-top" alt="...">
+                        <img src="https://cdnx.jumpseller.com/musicchile/image/46042799/resize/900/900?1709433874" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Saxofón Tenor Allegro Dorado All6435L</h5>
-                            <p class="card-text">Saxofón ligero con un tome mas elegante con esa capa dorada.</p>
-                            <p>$599.900</p>
+                            <h5 class="card-title">Violín Outfit 4/4' SV-150 Cremona</h5>
+                            <p class="card-text">La Serie Premier Student combina diseños tradicionales con especificaciones de alto nivel.</p>
+                            <p>$299.900</p>
                             <a href="#" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
@@ -259,11 +282,11 @@
 
                 <div class="col-md-6">
                     <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/28392459/resize/450/450?1665663845" class="card-img-top" alt="...">
+                        <img src="https://cdnx.jumpseller.com/musicchile/image/46042799/resize/900/900?1709433874" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Saxofón Tenor Allegro Dorado All6435L con bolso</h5>
-                            <p class="card-text">Saxofon con su bolso para tenerlo siempre seguro.</p>
-                            <p>$679.990</p>
+                            <h5 class="card-title">Violín Outfit 1/2' HV-100 Cervini</h5>
+                            <p class="card-text">Este conjunto ofrece un equilibrio entre materiales de calidad y accesorios esenciales, haciéndolo ideal para músicos que buscan un instrumento confiable y accesible..</p>
+                            <p>$109.900</p>
                             <a href="#" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
@@ -271,51 +294,29 @@
 
                 <div class="col-md-6">
                     <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/24265368/resize/900/900?1652947178 1x, https://cdnx.jumpseller.com/musicchile/image/24265368/resize/1080/1080?1652947178 2x" class="card-img-top" alt="...">
+                        <img src="https://cdnx.jumpseller.com/musicchile/image/46042819/resize/900/900?1709433965" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Saxo Soprano Allegro Dorado All6433L</h5>
-                            <p class="card-text">Este se han convertido en el instrumento mas usado en varias partes del mundo.</p>
-                            <p>$449.990</p>
+                            <h5 class="card-title">Violín Outfit 4/4' SV-130 Cremona</h5>
+                            <p class="card-text">Para el estudiante principiante que necesita un instrumento con características ligeramente de mayor calidad.</p>
+                            <p>$269.990</p>
                             <a href="#" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
                 </div>
 
+
                 <div class="col-md-6">
                     <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/28411112/resize/900/900?1665689943 1x, https://cdnx.jumpseller.com/musicchile/image/28411112/resize/1080/1080?1665689943 2x" class="card-img-top" alt="...">
+                        <img src="https://cdnx.jumpseller.com/musicchile/image/46042809/resize/900/900?1709433922" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Correa para Saxofón doble Allegro ALL-SX-LV3207BK</h5>
-                            <p class="card-text">Tanto como para saxofón de cualquier tipo ya sea alto, soprano y tenor.</p>
-                            <p>$14.990</p>
+                            <h5 class="card-title">Violín Outfit 4/4' SV-1600 Cremona</h5>
+                            <p class="card-text">Las conjuntos de violín de la serie Maestro están diseñados específicamente para satisfacer las necesidades de los estudiantes</p>
+                            <p>$979.990</p>
                             <a href="#" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-6">
-                    <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/42829881/resize/900/900?1701297342" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Correa para Saxofón ALL-SXBK-01</h5>
-                            <p class="card-text">Un poco mas pequeño pero para de cualquier tipo ya sea alto, soprano y tenor.</p>
-                            <p>$7.490</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="card" style="width: 20rem;">
-                        <img id="first-image" class="trsn w-100" src="https://cdnx.jumpseller.com/musicchile/image/28411071/resize/900/900?1665689892" srcset="https://cdnx.jumpseller.com/musicchile/image/28411071/resize/900/900?1665689892 1x, https://cdnx.jumpseller.com/musicchile/image/28411071/resize/1080/1080?1665689892 2x" alt="Correa para Saxofón Allegro Negro ALL-SXPL-BK" title="Correa para Saxofón Allegro Negro ALL-SXPL-BK">
-                        <div class="card-body">
-                            <h5 class="card-title">Correa para Saxofón Allegro Negro ALL-SXPL-BK</h5>
-                            <p class="card-text">Tanto como para saxofón de cualquier tipo ya sea alto, soprano y tenor.</p>
-                            <p>$9.990</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
 
             </div>
         </div>
@@ -329,22 +330,22 @@
             <div class="col-md-6">
                 
                 <div class="card" style="width: 20rem;">
-                    <img src="https://cdnx.jumpseller.com/musicchile/image/28392363/resize/450/450?1665663662" class="card-img-top" alt="...">
+                    <img src="Imagenes/cursoguitarra.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">Saxofón Alto Allegro Antique All6430An</h5>
-                        <p class="card-text">Único en su clase, delicado, sencillo y ligero.</p>
-                        <p> $499.900</p>
+                        <h5 class="card-title">Curso de guitarra basico</h5>
+                        <p class="card-text">En este curso aprenderas tocar las guitarra de una manera muy sencilla </p>
+                        <p> $39.990/mensuales</p>
                         <a href="#" class="btn btn-primary">Comprar</a>
                     </div>
                 </div>
 
                 <div class="col-md-6">
                     <div class="card" style="width: 20rem;">
-                        <img src="Imagenes/saxofon.jpg" class="card-img-top" alt="...">
+                        <img src="Imagenes/bateria.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Saxofón Tenor Allegro Dorado All6435L</h5>
-                            <p class="card-text">Saxofón ligero con un tome mas elegante con esa capa dorada.</p>
-                            <p>$599.900</p>
+                            <h5 class="card-title">Curso basico/medio de bateria</h5>
+                            <p class="card-text">Este curso va para todo publico de cualquier edad, solo tienes que tener ganas</p>
+                            <p>$45.990/mensuales</p>
                             <a href="#" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
@@ -352,62 +353,16 @@
 
                 <div class="col-md-6">
                     <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/28392459/resize/450/450?1665663845" class="card-img-top" alt="...">
+                        <img src="Imagenes/niños.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Saxofón Tenor Allegro Dorado All6435L con bolso</h5>
-                            <p class="card-text">Saxofon con su bolso para tenerlo siempre seguro.</p>
-                            <p>$679.990</p>
+                            <h5 class="card-title">Curso para niño de 5 a 17 años </h5>
+                            <p class="card-text">Este curso es especialmente realizados para niño y puedan desarrollar sus habilidades mas rapido</p>
+                            <p>$34.990/mensuales</p>
                             <a href="#" class="btn btn-primary">Comprar</a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-md-6">
-                    <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/24265368/resize/900/900?1652947178 1x, https://cdnx.jumpseller.com/musicchile/image/24265368/resize/1080/1080?1652947178 2x" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Saxo Soprano Allegro Dorado All6433L</h5>
-                            <p class="card-text">Este se han convertido en el instrumento mas usado en varias partes del mundo.</p>
-                            <p>$449.990</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/28411112/resize/900/900?1665689943 1x, https://cdnx.jumpseller.com/musicchile/image/28411112/resize/1080/1080?1665689943 2x" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Correa para Saxofón doble Allegro ALL-SX-LV3207BK</h5>
-                            <p class="card-text">Tanto como para saxofón de cualquier tipo ya sea alto, soprano y tenor.</p>
-                            <p>$14.990</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="card" style="width: 20rem;">
-                        <img src="https://cdnx.jumpseller.com/musicchile/image/42829881/resize/900/900?1701297342" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <h5 class="card-title">Correa para Saxofón ALL-SXBK-01</h5>
-                            <p class="card-text">Un poco mas pequeño pero para de cualquier tipo ya sea alto, soprano y tenor.</p>
-                            <p>$7.490</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-md-6">
-                    <div class="card" style="width: 20rem;">
-                        <img id="first-image" class="trsn w-100" src="https://cdnx.jumpseller.com/musicchile/image/28411071/resize/900/900?1665689892" srcset="https://cdnx.jumpseller.com/musicchile/image/28411071/resize/900/900?1665689892 1x, https://cdnx.jumpseller.com/musicchile/image/28411071/resize/1080/1080?1665689892 2x" alt="Correa para Saxofón Allegro Negro ALL-SXPL-BK" title="Correa para Saxofón Allegro Negro ALL-SXPL-BK">
-                        <div class="card-body">
-                            <h5 class="card-title">Correa para Saxofón Allegro Negro ALL-SXPL-BK</h5>
-                            <p class="card-text">Tanto como para saxofón de cualquier tipo ya sea alto, soprano y tenor.</p>
-                            <p>$9.990</p>
-                            <a href="#" class="btn btn-primary">Comprar</a>
-                        </div>
-                    </div>
                 </div>
 
             </div>
